k8s/deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: model-service
  labels:
    app: model-service
spec:
  containers:
  - name: model-service
    image: "ghcr.io/remla23-team19/model-service:latest"
    ports:
    - containerPort: 8080
  imagePullSecrets:
  - name: dockerconfigjson-github-com
    
---

apiVersion: v1
kind: Service
metadata:
  name: model-service-serv
  labels:
    app: model-service-serv
spec:
  selector:
    app: model-service
  ports:
    - port: 8080 
      targetPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: 
    app: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-deployment
  template:
    metadata:
      labels:
        app: app-deployment
    spec:
      containers:
      - name: app-deployment
        image: "ghcr.io/remla23-team19/app:1.0.4"
        imagePullPolicy: Always
        ports:
        - containerPort: 9999 
      imagePullSecrets:
      - name: dockerconfigjson-github-com

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec: 
  selector:
    app: app-deployment
  ports: 
    - port: 9999 
      targetPort: 9999

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        number: 9999
