k8s/ingress.yml
#ingress.yml
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    app: app
spec:
  containers:
  - name: app
    image: "ghcr.io/remla23-team19/model-service:latest"
    ports:
    - containerPort: 9999
  imagePullSecrets:
  - name: dockerconfigjson-github-com

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 9999

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        number: 9999
